syntax = "proto3";

package booking.v1;

option go_package = "booking/api/booking/v1;bookingv1";

import "google/protobuf/timestamp.proto";

enum BookingStatus {
  BOOKING_STATUS_UNSPECIFIED = 0;
  BOOKING_STATUS_PENDING = 1;
  BOOKING_STATUS_CONFIRMED = 2;
  BOOKING_STATUS_CANCELLED = 3;
}

message Booking {
  string id = 1;
  int64 user_id = 2;
  string hotel_id = 3;
  repeated BookingRoomResponse booking_rooms = 4;
  google.protobuf.Timestamp check_in = 5;
  google.protobuf.Timestamp check_out = 6;
  BookingStatus status = 7;
  string guest_name = 8;
  optional string guest_email = 9;
  optional string guest_phone = 10;
  string currency = 11;
  string final_total_amount = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message BookingShort {
  string id = 1;
  int64 user_id = 2;
  string hotel_id = 3;
  google.protobuf.Timestamp check_in = 4;
  google.protobuf.Timestamp check_out = 5;
  BookingStatus status = 6;
  string guest_name = 7;
  optional string guest_email = 8;
  optional string guest_phone = 9;
  string currency = 10;
  string expected_total_amount = 11;
  string final_total_amount = 12;
  repeated BookingRoomShort rooms = 13;
}

message BookingRoomResponse {
  string id = 1;
  string room_id = 2;
  uint32 adults = 3;
  uint32 children = 4;
  string price_per_night = 5;
}

message BookingRoomShort {
  string id = 1;
  string room_id = 2;
  uint32 adults = 3;
  uint32 children = 4;
  string price_per_night = 5;
  optional RoomLockShort room_lock = 6;
}

message RoomLockShort {
  string id = 1;
  DateRange stay_range = 2;
  bool is_active = 3;
  optional google.protobuf.Timestamp expires_at = 4;
  google.protobuf.Timestamp created_at = 5;
}

message DateRange {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}
